--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 REACT_APP_CLIENT_ID=1f4ddefc-d849-4f30-a410-73297ed98422
-REACT_APP_OAUTH_REDIRECT_URI=https%3A%2F%2Fec2-3-87-135-10.compute-1.amazonaws.com%2Fauth.php
+REACT_APP_OAUTH_REDIRECT_URI=https%3A%2F%2Fec2-3-87-135-10.compute-1.amazonaws.com%2Fauth.js
 REACT_APP_OAUTH_SCOPES=Notes.Read.All%20Files.ReadWrite.All%20User.Read
 REACT_APP_WEBSERVER=https://ec2-3-87-135-10.compute-1.amazonaws.com
 REACT_APP_GRAPH_API_URL=https://graph.microsoft.com/v1.0/
