--- a/env.example
+++ b/env.example
@@ -2,6 +2,6 @@ REACT_APP_CLIENT_ID=1f4ddefc-d849-4f30-a410-73297ed98422
 REACT_APP_OAUTH_REDIRECT_URI=http%3A%2F%2Flocalhost:3000%2Fauth
 REACT_APP_OAUTH_LOGOUT_URI=http%3A%2F%2Flocalhost:3000%2F
 REACT_APP_OAUTH_SCOPES=Notes.Read.All%20Files.ReadWrite.All%20User.Read
-REACT_APP_WEBSERVER=http://localhost:3000
 REACT_APP_GRAPH_API_URL=https://graph.microsoft.com/v1.0/
 REACT_APP_GRAPH_API_URL_BETA=https://graph.microsoft.com/beta/
+REACT_APP_COMMUNICATION_SERVER=http://0.0.0.0:8080/webpack-dev-server/
