adding scrollbar for split pane

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "hellojs": "^1.18.4",
     "html-react-parser": "^0.10.3",
+    "i": "^0.3.6",
     "node-sass": "^4.14.1",
     "qs": "^6.9.3",
     "querystring": "^0.2.0",
@@ -22,6 +23,7 @@
     "react-accessible-accordion": "^3.0.1",
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.1",
+    "react-custom-scroll": "^4.2.0",
     "react-dom": "^16.13.1",
     "react-html-converter": "^0.3.2",
     "react-html-parser": "^2.0.2",
@@ -31,8 +33,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
     "react-spinners": "^0.8.3",
+    "react-split-pane": "^0.1.91",
     "react-tabs": "^3.1.0",
-    "string-strip-html": "^4.4.0"
+    "string-strip-html": "^4.4.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
