--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.1",
     "react-custom-scroll": "^4.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-html-converter": "^0.3.2",
     "react-html-parser": "^2.0.2",
+    "react-indicators": "^0.3.15",
     "react-modal-video": "^1.2.3",
     "react-pdf": "^4.1.0",
     "react-router": "^5.1.2",
