simplify authentication / remove google login component -> use the same code/logic for Google as we did for Microsoft

--- a/env.example
+++ b/env.example
@@ -12,3 +12,4 @@ REACT_APP_COMMUNICATION_SERVER=http://0.0.0.0:8080/webpack-dev-server/
 ### Google Configuration
 ###
 REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.googleusercontent.com
+REACT_APP_GOOGLE_OAUTH_SCOPES=https://www.googleapis.com/auth/userinfo.profile
