--- a/env.example
+++ b/env.example
@@ -12,6 +12,6 @@ REACT_APP_COMMUNICATION_SERVER=http://0.0.0.0:8080/webpack-dev-server/
 ### Google Configuration
 ###
 REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.googleusercontent.com
-REACT_APP_GOOGLE_OAUTH_SCOPES=https://www.googleapis.com/auth/userinfo.profile%20https://www.googleapis.com/auth/classroom.courses.readonly
+REACT_APP_GOOGLE_OAUTH_SCOPES=https://www.googleapis.com/auth/userinfo.profile%20https://www.googleapis.com/auth/classroom.courses.readonly%20https://www.googleapis.com/auth/classroom.coursework.me.readonly
 REACT_APP_GOOGLE_CLASSROOM_API=https://classroom.googleapis.com/v1/
 REACT_APP_GOOGLE_USERINFO_API=https://www.googleapis.com/userinfo/v2/
