--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-accessible-accordion": "^3.0.1",
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.1",
+    "react-chat-elements": "^10.9.2",
     "react-custom-scroll": "^4.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
@@ -32,7 +33,6 @@
     "react-html-parser": "^2.0.2",
     "react-indicators": "^0.3.15",
     "react-modal-video": "^1.2.3",
-    "react-pdf": "^4.1.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
