--- a/env.example
+++ b/env.example
@@ -9,3 +9,9 @@ REACT_APP_OAUTH_LOGOUT_URI=http%3A%2F%2Flocalhost:3000%2F
 ### Google Configuration
 ###
 REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.googleusercontent.com
+
+###
+### React App Https Configuration
+###
+HTTPS=true
+PORT=443
