--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react": "^17.0.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "hellojs": "^1.18.4",
