--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/react": "^17.0.0",
     "axios": "^0.21.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.3",
     "hellojs": "^1.18.4",
     "html-react-parser": "^0.10.3",
     "i": "^0.3.6",
+    "moment": "^2.16.0",
     "node-sass": "^4.14.1",
     "qs": "^6.9.3",
     "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-accessible-accordion": "^3.0.1",
     "react-axios": "^2.0.3",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-chat-elements": "^10.9.2",
     "react-custom-scroll": "^4.2.0",
     "react-custom-scrollbars": "^4.2.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-html-converter": "^0.3.2",
     "react-html-parser": "^2.0.2",
@@ -37,6 +39,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
+    "react-select": "^3.1.1",
     "react-spinners": "^0.8.3",
     "react-split-pane": "^0.1.91",
     "react-tiny-fab": "^3.5.0",
