--- a/mygurukool/.env
+++ b/mygurukool/.env
@@ -13,5 +13,5 @@ REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.go
 ###
 ### React App Https Configuration
 ###
-HTTPS=true
-PORT=443
+###HTTPS=true
+###PORT=443
