--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-sass-package-importer": "5.3.2",
     "nouislider": "15.2.0",
     "react": "17.0.2",
+    "react-accessible-accordion": "^3.3.5",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-datetime": "3.0.4",
