--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "read-excel-file": "^5.2.9",
+    "xlsx": "^0.17.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
