--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-show-more-text": "^1.5.0",
     "reactstrap": "8.9.0"
   },
   "devDependencies": {
