extracting school api url into env

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 ### MS Configuration
 ###
 REACT_APP_CLIENT_ID=1f4ddefc-d849-4f30-a410-73297ed98422
-REACT_APP_OAUTH_REDIRECT_URI=http%3A%2F%2Flocalhost:443%2Fauth
-REACT_APP_OAUTH_LOGOUT_URI=http%3A%2F%2Flocalhost:443%2F
+REACT_APP_OAUTH_REDIRECT_URI=http%3A%2F%2Flocalhost:3000%2Fauth
+REACT_APP_OAUTH_LOGOUT_URI=http%3A%2F%2Flocalhost:3000%2F
 
 ###
 ### Google Configuration
@@ -15,3 +15,8 @@ REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.go
 ###
 ##HTTPS=false
 ##PORT=443
+
+###
+### School API configuration
+###
+SCHOOL_API_URL=https://school-api-mm5s89d6t-mygurukool.vercel.app/api
