--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "react-scripts": "2.1.8",
     "react-select": "^3.1.1",
     "react-show-more-text": "^1.5.0",
+    "react-simple-tooltip": "^2.6.3",
     "react-spinners": "^0.8.3",
     "react-split-pane": "^0.1.91",
     "react-tiny-fab": "^3.5.0",
+    "reactstrap": "^8.10.0",
     "string-strip-html": "^4.4.0",
     "styled-components": "^5.1.1"
   },
