--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
     "react-select": "^3.1.1",
+    "react-select-country-list": "^2.2.3",
     "react-show-more-text": "^1.5.0",
     "react-spinners": "^0.8.3",
     "react-split-pane": "^0.1.91",
