renamed school_api_url to REACT_APP_MGK_API_URL

--- a/.env
+++ b/.env
@@ -18,5 +18,5 @@ REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.go
 
 ###
 ### School API configuration
-###
-SCHOOL_API_URL=https://school-api-mm5s89d6t-mygurukool.vercel.app/api
+###REACT_APP_MGK_API_URL=https://school-api-mygurukool.vercel.app/api
+REACT_APP_MGK_API_URL=http://localhost:8081/api
