--- a/.env
+++ b/.env
@@ -18,5 +18,6 @@ REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.go
 
 ###
 ### School API configuration
-###REACT_APP_MGK_API_URL=https://school-api-mygurukool.vercel.app/api
-REACT_APP_MGK_API_URL=http://localhost:4000/api
+#REACT_APP_MGK_API_URL=https://school-api-three.vercel.app/api << PROD (Vercel)
+REACT_APP_MGK_API_URL=https://school-api-mygurukool.vercel.app/api << Vercel DEV
+#REACT_APP_MGK_API_URL=http://localhost:8081/api  << Localhost
