--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
+    "react-file-base64": "^1.0.3",
     "react-html-converter": "^0.3.2",
     "react-html-parser": "^2.0.2",
     "react-indicators": "^0.3.15",
@@ -46,7 +47,7 @@
     "react-simple-tooltip": "^2.6.3",
     "react-spinners": "^0.8.3",
     "react-split-pane": "^0.1.91",
-    "react-tiny-fab": "^3.5.0",
+    "react-tiny-fab": "^4.0.3",
     "reactstrap": "^8.10.0",
     "string-strip-html": "^4.4.0",
     "styled-components": "^5.1.1"
@@ -76,7 +77,6 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
-    "gh-pages": "^3.0.0",
-    "draft-js": "^0.11.7"
+    "gh-pages": "^3.0.0"
   }
 }
