--- a/.env
+++ b/.env
@@ -13,10 +13,17 @@ REACT_APP_GOOGLE_CLIENT_ID=629959808842-k1hnr6f2pkfbv9n1fnekpn8gkl659crc.apps.go
 ###
 ### React App Https Configuration
 ###
-##HTTPS=false
-##PORT=443
+HTTPS=true
+PORT=443
 
 ###
 ### School API configuration
-###REACT_APP_MGK_API_URL=https://school-api-mygurukool.vercel.app/api
-REACT_APP_MGK_API_URL=http://localhost:4000/api
+
+## << PROD (Vercel)
+REACT_APP_MGK_API_URL=https://school-api-three.vercel.app/api
+
+##<< Vercel DEV
+#REACT_APP_MGK_API_URL=https://school-api-mygurukool.vercel.app/api
+
+## Localhost
+#REACT_APP_MGK_API_URL=http://localhost:8081/api 
